[package]
name = "tauri-plugin-os-keystore"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-os-keystore"

[dependencies]
tauri = { version = "2.3.1" }
serde = "1.0"
thiserror = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies.keyring]
version = "4.0.0-rc.1"

[build-dependencies]
tauri-plugin = { version = "2.0.4", features = ["build"] }
tauri-build = "2.0.5"


